--- a/sorter.html
+++ b/sorter.html
@@ -312,7 +312,7 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <th class="Science" onclick="page0()">
+          <th class="Science" onclick="product(0)">
             <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -331,7 +331,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="page1()">
+          <th class="Science" onclick="product(1)">
             <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -352,7 +352,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="product(2)">
             <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -375,7 +375,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="product(3)">
             <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -396,7 +396,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="product(4)">
             <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -417,7 +417,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="product(5)">
             <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -440,7 +440,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="product(6)">
             <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -461,7 +461,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="product(7)">
             <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -482,7 +482,7 @@
               </span>
             </span>
           </th>
-          <th class="Computer-Science" onclick="window.location.href='productPage.html';">
+          <th class="Computer-Science" onclick="product(8)">
             <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -505,7 +505,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Space" onclick="window.location.href='productPage.html';">
+          <th class="Space" onclick="product(9)">
             <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -526,7 +526,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="window.location.href='productPage.html';">
+          <th class="Space" onclick="product(10)">
             <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -547,7 +547,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="window.location.href='productPage.html';">
+          <th class="Space" onclick="product(11)">
             <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -570,7 +570,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="ShortStories" onclick="window.location.href='productPage.html';">
+          <th class="ShortStories" onclick="product(12)">
             <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -591,7 +591,7 @@
               </span>
             </span>
           </th>
-          <th class="ShortStories" onclick="window.location.href='productPage.html';">
+          <th class="ShortStories" onclick="product(13)">
             <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -612,7 +612,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="window.location.href='productPage.html';">
+          <th class="Space" onclick="product(14)">
             <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -635,7 +635,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Space" onclick="window.location.href='productPage.html';">
+          <th class="Space" onclick="product(15)">
             <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -656,7 +656,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="window.location.href='productPage.html';">
+          <th class="Space" onclick="product(16)">
             <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
