--- a/index.html
+++ b/index.html
@@ -224,6 +224,26 @@
             </span>
           </p>
         </th>
+        <th onclick="product(15)">
+          <img src="resources/book16(1).jpg" width="10%" height="auto">
+          <hr>
+          <p>
+            <span style="background-color:red;color:black;font-size:15px;">
+              50% off
+            </span>
+            <br>
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+              $30.00
+            </span>
+            <span style="font-size:20px;">
+              $15.00
+            </span>
+            <br>
+            <span style="font-size:15px;">
+              Bowl of Heaven & Shipstar
+            </span>
+          </p>
+        </th>
       </tr>
     </table>
     <hr>
