--- a/sorter.html
+++ b/sorter.html
@@ -301,7 +301,14 @@
             <legend>
               Prices
             </legend>
-            
+            <input type="number" name="minPrice" id="minPrice" min="0" max="100">
+            <label for="minPrice">
+              min: 
+            </label>
+            <input type="number" name="maxPrice" id="maxPrice" min="0" max="100">
+            <label for="maxPrice">
+              max: 
+            </label>
           </fieldset>
           <br>
           <input type="reset" value="Reset">
