--- a/Cart.html
+++ b/Cart.html
@@ -176,7 +176,7 @@
         Cart
       </div>
     </nav>
-    <div class="items" onload="checkCartCookie()">
+    <div class="items" onload="buildCart()">
       <ul id="itemsList">
       </ul>
     </div>
