--- a/Cart.html
+++ b/Cart.html
@@ -180,10 +180,14 @@
       <ul id="itemsList">
       </ul>
     </div>
-    <div class="information">
-      <p class="totals">
-      </p>
-    </div>
+    <fieldset style="float:right;">
+      <h2 id="totals">
+        
+      </h2>
+      <button onclick="window.location.href='PaymentOpt.html';" id="CheckoutBtn">
+        Checkout
+      </button>
+    </fieldset>
     <footer>
 
     </footer>
