--- a/Cart.html
+++ b/Cart.html
@@ -184,7 +184,7 @@
       <h2 id="totals">
         
       </h2>
-      <button onclick="window.location.href='PaymentOpt.html';" id="CheckoutBtn">
+      <button onclick="window.location.href='PaymentOpts.html';" id="CheckoutBtn">
         Checkout
       </button>
     </fieldset>
