--- a/productPage.html
+++ b/productPage.html
@@ -211,6 +211,9 @@
                     </button>
                 </div>
               </div>
+                <button id="cancelBtn" onclick="window.location.href='Cart.html';">
+                    Cancel
+                </button>
             </fieldset>
               <script src="script.js"></Script>
         <footer>
