--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -12,8 +12,12 @@
         <script src="client.js" defer></script>
     </head>
     <body>
-        <main>
-                <div id="payment-request-button" style="padding-left:48%;padding-top: 49%;">
-                </div>
+        <fieldset>
+            <div id="payment-request-button" style="padding-left:48%;padding-top: 49%;">
+            </div>
+            <button onclick="window.location.href='Cart.html';" id="PaymentOpts">
+                Cancel
+            </button>
+        </fieldset>
     </body>
 </html>
