--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -15,7 +15,7 @@
         <fieldset>
             <div id="payment-request-button" style="padding-left:48%;padding-top: 49%;">
             </div>
-            <button onclick="window.location.href='Cart.html';" id="PaymentOpts">
+            <button onclick="window.location.href='Cart.html';" id="cancelBtn">
                 Cancel
             </button>
         </fieldset>
