--- a/Cart.html
+++ b/Cart.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -178,6 +177,23 @@
     </nav>
     <div class="items" onload="buildCart()">
       <ul id="itemsList">
+        <div class="body">
+      <div class="container">
+        <h3 class="heading">Products</h3>
+        <div class="result"></div>
+      </div>
+      <div class="cart">
+        <div class="cart-header">
+          <h3>CART</h3>
+          <p class="noOfItems">0 items</p>
+        </div>
+        <hr noshade="true" size="1px" />
+        <div class="cart-items"></div>
+        <hr noshade="true" size="1px" />
+        <div class="cart-footer cart-header">
+          <h4>Total</h4>
+          <p class="total">$0</p>
+        </div>
       </ul>
     </div>
     <fieldset style="float:right;">
@@ -191,5 +207,6 @@
     <footer>
 
     </footer>
+          <script src="script.js"></script>
   </body>
 </html>
