--- a/Cart.html
+++ b/Cart.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <style>
       * {
     margin: 0;
@@ -346,9 +347,7 @@ hr {
         Cart
       </div>
     </nav>
-    <div class="items" onload="buildCart()">
-      <ul id="itemsList">
-        <div class="body">
+    <div class="body">
       <div class="container">
         <h3 class="heading">Products</h3>
         <div class="result"></div>
@@ -365,10 +364,11 @@ hr {
           <h4>Total</h4>
           <p class="total">$0</p>
         </div>
-      </ul>
+        <button class="buy-btn">PROCEED TO BUY</button>
+      </div>
     </div>
           
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
     <fieldset style="float:right;">
       <h2 id="totals">
         
