--- a/Cart.html
+++ b/Cart.html
@@ -354,7 +354,7 @@ hr {
       </div>
       <div class="cart">
         <div class="cart-header">
-          <h3>CART</h3>
+          <h3>Your Cart</h3>
           <p class="noOfItems">0 items</p>
         </div>
         <hr noshade="true" size="1px" />
@@ -364,7 +364,7 @@ hr {
           <h4>Total</h4>
           <p class="total">$0</p>
         </div>
-        <button class="buy-btn">PROCEED TO BUY</button>
+        <button class="buy-btn">Check out</button>
       </div>
     </div>
           
