--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               25% off
             </span>
             <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;border-radius:20px;">
               $60.00 
             </span>
             <span style="font-size:20px">
@@ -212,7 +212,7 @@
               50% off
             </span>
             <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;border-radius:20px;">
               $18.00 
             </span>
             <span style="font-size:20px">
@@ -228,7 +228,7 @@
           <img src="resources/book16(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:black;font-size:15px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:20px;">
               50% off
             </span>
             <br>
