--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
           <img src="resources/book8(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:white;font-size:15px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;">
               25% off
             </span>
             <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;border-radius:20px;">
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
               $60.00 
             </span>
             <span style="font-size:20px">
@@ -208,11 +208,11 @@
           <img src="resources/book6(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:white;font-size:15px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;">
               50% off
             </span>
             <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;border-radius:20px;">
+            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
               $18.00 
             </span>
             <span style="font-size:20px">
@@ -228,7 +228,7 @@
           <img src="resources/book16(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:20px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;">
               50% off
             </span>
             <br>
