--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <img src="resources/book8(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
               25% off
             </span>
             <br>
@@ -208,7 +208,7 @@
           <img src="resources/book6(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
               50% off
             </span>
             <br>
@@ -228,7 +228,7 @@
           <img src="resources/book16(1).jpg" width="10%" height="auto">
           <hr>
           <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
               50% off
             </span>
             <br>
