--- a/productPage.html
+++ b/productPage.html
@@ -211,11 +211,8 @@
                     </button>
                 </div>
               </div>
-                <button id="cancelBtn" onclick="window.location.href='Cart.html';">
-                    Cancel
-                </button>
             </fieldset>
-              <script src="script.js"></Script>
+              <script src="script.js"></script>
         <footer>
 
         </footer>
