--- a/productPage.html
+++ b/productPage.html
@@ -204,7 +204,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button class="cartBtn" onclick="checkCookie()">
+                    <button id="cartBtn" onclick="checkCookie()">
                         <b>
                           Add To Cart
                         </b>
