--- a/sorter.html
+++ b/sorter.html
@@ -321,7 +321,7 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <th class="Science" onclick="product(0)">
+          <th class="Science" onclick="window.location.href='QS.html';">
             <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
