--- a/QS.html
+++ b/QS.html
@@ -208,7 +208,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button>
+                    <button onclick="localStorage.setItem('Quantum Supremacy', '1')">
                         <b>
                           Add To Cart
                         </b>
