--- a/sorter.html
+++ b/sorter.html
@@ -340,7 +340,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="product(1)">
+          <th class="Science" onclick="window.location.href='OOT.html';">
             <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
