--- a/BABQ.html
+++ b/BABQ.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            On The Origin Of Time
+            Breif Answers, Big Questions
         </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -181,36 +181,47 @@
                 <table>
                     <tr>
                         <th>
-                            <img src="resources/book2(1).jpg" id="pict1" width="auto" height="700px">
+                            <img src="resources/book8(1).jpg" id="pict1" width="auto" height="700px">
                         </th>
                     </tr>
                     <tr>
                         <th>
-                            <img src="resources/book2(2).jpg" id="pict2" width="100px" height="100px">
+                            <img src="resources/book8(2).jpg" id="pict2" width="100px" height="100px">
                         </th>
                         <th>
-                            <img src="resources/book2(3).jpg" id="pict3" width="100px" height="100px">
+                            <img src="resources/book8(3).jpg" id="pict3" width="100px" height="100px">
                         </th>
                         <th>
-                            <img src="resources/book2(4).jpg" id="pict4" width="100px" height="100px">
+                            <img src="resources/book8(4).jpg" id="pict4" width="100px" height="100px">
                         </th>
                     </tr>
                 </table>
             </div>
             <fieldset style="float:right;padding-right:100px;">
               <div>
+                <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+                    <b>
+                        25% off
+                    </b>
+                </span>
+                <br>
                 <h2 id="bookTitle">
-                    On The Origin Of Time
+                    Breif Answers, Big Questions
                     <br>
-                    $15.00
+                    <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                        $60.00 
+                    </span>
+                    <span style="font-size:20px">
+                        $45.00
+                    </span>
                 </h2>
                 <h3 id="bookAuther">
-                    Thomas Hertog
+                    Stephen Hawking
                 </h3>
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('On The Origin Of Time', '1');alert('added to your cart')">
+                    <button onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
