--- a/QS.html
+++ b/QS.html
@@ -201,6 +201,8 @@
               <div>
                 <h2 id="bookTitle">
                     Quantum Supremacy
+                    <br>
+                    $15.00
                 </h2>
                 <h3 id="bookAuther">
                     Michio Kaku
@@ -208,7 +210,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('Quantum Supremacy', '1')">
+                    <button onclick="localStorage.setItem('Quantum Supremacy', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
