--- a/sorter.html
+++ b/sorter.html
@@ -361,7 +361,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="product(2)">
+          <th class="Science" onclick="window.location.href='O.html';">
             <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -384,7 +384,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Science" onclick="product(3)">
+          <th class="Science" onclick="window.location.href='APH.html';">
             <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -405,7 +405,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="product(4)">
+          <th class="Science" onclick="window.location.href='AGL.html';">
             <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -426,7 +426,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="product(5)">
+          <th class="Science" onclick="window.location.href='TGD.html';">
             <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -449,7 +449,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Science" onclick="product(6)">
+          <th class="Science" onclick="window.location.href='LFA.html';">
             <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -470,7 +470,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="product(7)">
+          <th class="Science" onclick="window.location.href='BABQ.html';">
             <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -491,7 +491,7 @@
               </span>
             </span>
           </th>
-          <th class="Computer-Science" onclick="product(8)">
+          <th class="Computer-Science" onclick="window.location.href='TCL.html';">
             <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -514,7 +514,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Space" onclick="product(9)">
+          <th class="Space" onclick="window.location.href='TBP.html';">
             <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -535,7 +535,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="product(10)">
+          <th class="Space" onclick="window.location.href='SE.html';">
             <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -556,7 +556,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="product(11)">
+          <th class="Space" onclick="window.location.href='BL.html';">
             <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -579,7 +579,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="ShortStories" onclick="product(12)">
+          <th class="ShortStories" onclick="window.location.href='HUTS.html';">
             <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -600,7 +600,7 @@
               </span>
             </span>
           </th>
-          <th class="ShortStories" onclick="product(13)">
+          <th class="ShortStories" onclick="window.location.href='TWE.html';">
             <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -621,7 +621,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="product(14)">
+          <th class="Space" onclick="window.location.href='ROT.html';">
             <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -644,7 +644,7 @@
           </th>
         </tr>
         <tr class="booksRow">
-          <th class="Space" onclick="product(15)">
+          <th class="Space" onclick="window.location.href='BHS.html';">
             <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -665,7 +665,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="product(16)">
+          <th class="Space" onclick="window.location.href='G.html';">
             <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
