--- a/ROT.html
+++ b/ROT.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            On The Origin Of Time
+            The Redemtion of Time
         </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -181,18 +181,18 @@
                 <table>
                     <tr>
                         <th>
-                            <img src="resources/book2(1).jpg" id="pict1" width="auto" height="700px">
+                            <img src="resources/book15(1).jpg" id="pict1" width="auto" height="700px">
                         </th>
                     </tr>
                     <tr>
                         <th>
-                            <img src="resources/book2(2).jpg" id="pict2" width="100px" height="100px">
+                            <img src="resources/book15(2).jpg" id="pict2" width="100px" height="100px">
                         </th>
                         <th>
-                            <img src="resources/book2(3).jpg" id="pict3" width="100px" height="100px">
+                            <img src="resources/book15(3).jpg" id="pict3" width="100px" height="100px">
                         </th>
                         <th>
-                            <img src="resources/book2(4).jpg" id="pict4" width="100px" height="100px">
+                            <img src="resources/book15(4).jpg" id="pict4" width="100px" height="100px">
                         </th>
                     </tr>
                 </table>
@@ -200,17 +200,17 @@
             <fieldset style="float:right;padding-right:100px;">
               <div>
                 <h2 id="bookTitle">
-                    On The Origin Of Time
+                    The Redemtion of Time
                     <br>
-                    $15.00
+                    $20.00
                 </h2>
                 <h3 id="bookAuther">
-                    Thomas Hertog
+                    Baoshu
                 </h3>
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('On The Origin Of Time', '1');alert('added to your cart')">
+                    <button onclick="localStorage.setItem('The Redemtion of Time', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
