--- a/sorter.html
+++ b/sorter.html
@@ -54,6 +54,9 @@
           <option value="NeilDeGrasse">
             Neil DeGrasse Tyson
           </option>
+          <option value="Leonard">
+            Leonard Mlodinow
+          </option>
           <option value="Donald">
             Donald Goldsmith
           </option>
@@ -274,6 +277,11 @@
             <input type="radio" name="Authors" id="Stephen" value="Stephen" class="rad">
             <label for="Stephen">
               Stephen Hawking
+            </label>
+            <br>
+            <input type="radio" name="Authors" id="Leonard" value="Leonard" class="rad">
+            <label for="Leonard">
+              Leonard Mlodinow
             </label>
             <br>
             <input type="radio" name="Authors" id="BR" value="BR" class="rad">
