--- a/questions.html
+++ b/questions.html
@@ -52,6 +52,9 @@
             <option value="NeilDeGrasse">
               Neil DeGrasse Tyson
             </option>
+            <option value="Leonard">
+              Leonard Mlodinow
+            </option>
             <option value="Donald">
               Donald Goldsmith
             </option>
