--- a/sorter.html
+++ b/sorter.html
@@ -187,7 +187,7 @@
   <article>
     <section>
       <form method="get">
-        <fieldset style="float:left;">
+        <fieldset style="float:left;margin-left:5px;padding-left:5px;">
           <legend>
             <b>
               Filters
