--- a/sorter.html
+++ b/sorter.html
@@ -187,7 +187,7 @@
   <article>
     <section>
       <form method="get">
-        <fieldset style="float:left;margin-left:5px;padding-left:5px;">
+        <fieldset style="float:left;margin-left:5px;padding:5px 5px 5px 5px;">
           <legend>
             <b>
               Filters
@@ -321,7 +321,7 @@
             <input type="number" name="maxPrice" id="maxPrice" min="0" max="100">
           </fieldset>
           <br>
-          <input type="reset" value="Reset">
+          <input type="reset" value="Reset" style="margin-left:38%;padding-left:20px;padding-right:20px;">
         </fieldset>
       </form>
     </section>
