--- a/BABQ.html
+++ b/BABQ.html
@@ -197,6 +197,9 @@
                         <th>
                             <img src="resources/book8(4).jpg" id="pict4" width="100px" height="100px">
                         </th>
+                        <th>
+                          <img src="resources/book8(5).jpg" id="pict5" width="100px" height="100px">
+                        </th>
                     </tr>
                 </table>
             </div>
