--- a/sorter.html
+++ b/sorter.html
@@ -435,6 +435,11 @@
             </span>
           </th>
           <th class="Science" onclick="window.location.href='TGD.html';">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;text-align:center;">
+              <b>
+                50% off
+              </b>
+            </span>
             <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -450,8 +455,11 @@
                 By: Stephen Hawking
               </span>
               <br>
-              <span class="cost">
-                $18.00
+              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                $18.00 
+              </span>
+              <span style="font-size:20px">
+                 $9.00
               </span>
             </span>
           </th>
@@ -479,6 +487,11 @@
             </span>
           </th>
           <th class="Science" onclick="window.location.href='BABQ.html';">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;text-align:center;">
+              <b>
+                25% off
+              </b>
+            </span>
             <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -494,8 +507,11 @@
                 By: Stephen Hawking
               </span>
               <br>
-              <span class="cost">
-                $60.00
+              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                $60.00 
+              </span>
+              <span style="font-size:20px">
+                 $45.00
               </span>
             </span>
           </th>
@@ -653,6 +669,11 @@
         </tr>
         <tr class="booksRow">
           <th class="Space" onclick="window.location.href='BHS.html';">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;text-align:center;">
+              <b>
+                50% off
+              </b>
+            </span>
             <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -668,8 +689,11 @@
                 By: Gregory Benford & Larry Niven
               </span>
               <br>
-              <span class="cost">
+              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
                 $30.00
+              </span>
+              <span style="font-size:20px">
+                  $51.00
               </span>
             </span>
           </th>
