--- a/sorter.html
+++ b/sorter.html
@@ -488,11 +488,12 @@
             </span>
           </th>
           <th class="Science" onclick="window.location.href='BABQ.html';">
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;text-align:center;">
+            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:50px 50px 10px 10px;text-align:center;">
               <b>
                 25% off
               </b>
             </span>
+            <br>
             <br>
             <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
