--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </h2>
     <table>
       <tr>
-        <th onclick="window.location.href='productPage.html';">
+        <th onclick="window.location.href='BABQ.html';">
           <img src="resources/book8(1).jpg" width="10%" height="auto">
           <hr>
           <p>
@@ -207,7 +207,7 @@
             </span>
           </p>
         </th>
-        <th onclick="window.location.href='productPage.html';">
+        <th onclick="window.location.href='TGD.html';">
           <img src="resources/book6(1).jpg" width="10%" height="auto">
           <hr>
           <p>
@@ -227,7 +227,7 @@
             </span>
           </p>
         </th>
-        <th onclick="product(15)">
+        <th onclick="window.location.href='BHS.html';">
           <img src="resources/book16(1).jpg" width="10%" height="auto">
           <hr>
           <p>
