--- a/TGD.html
+++ b/TGD.html
@@ -202,6 +202,12 @@
             </div>
             <fieldset style="float:right;padding-right:100px;">
               <div>
+                <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+                    <b>
+                        50% off
+                    </b>
+                </span>
+                <br>
                 <h2 id="bookTitle">
                     The Grand Design
                     <br>
