--- a/BHS.html
+++ b/BHS.html
@@ -202,10 +202,18 @@
             </div>
             <fieldset style="float:right;padding-right:100px;">
               <div>
+                <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+                    <b>
+                        50% off
+                    </b>
+                </span>
                 <h2 id="bookTitle">
                     Bowl of Heaven & Shipstar
                     <br>
-                    $30.00
+                    <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                        $30.00
+                    </span>
+                     $15.00
                 </h2>
                 <h3 id="bookAuther">
                     Gregory Benford & Larry Niven
