--- a/TGD.html
+++ b/TGD.html
@@ -211,7 +211,10 @@
                 <h2 id="bookTitle">
                     The Grand Design
                     <br>
-                    $18.00
+                    <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                        $18.00
+                    </span>
+                    $9.00
                 </h2>
                 <h3 id="bookAuther">
                     Stephen Hawking & Leonard Mlodinow
