--- a/Cart.html
+++ b/Cart.html
@@ -180,20 +180,17 @@
       </div>
     </nav>
     <div class="body">
-      <div class="container">
-        <h3 class="heading">Products</h3>
-        <div class="result"></div>
-      </div>
       <div class="cart">
         <div class="cart-header">
           <h3>Your Cart</h3>
           <p class="noOfItems">0 items</p>
         </div>
         <hr noshade="true" size="1px" />
-        <div class="cart-items"></div>
-        <ul>
-          
-        </ul>
+        <div class="cart-items">
+          <ul class="cart-itemsList">
+            
+          </ul>
+        </div>
         <hr noshade="true" size="1px" />
         <div class="cart-footer cart-header">
           <h4>Total</h4>
