--- a/sorter.html
+++ b/sorter.html
@@ -208,7 +208,7 @@
             Deals
           </label>
           <br>
-          <fieldset style="padding-left:5px;padding-right:5px;">
+          <fieldset style="padding:5px 5px 5px 5px;">
             <legend>
               Topics
             </legend>
@@ -240,7 +240,7 @@
             </div>
           </fieldset>
           <br>
-          <fieldset class="authorFilter" style="padding-left:5px;padding-right:5px;">
+          <fieldset class="authorFilter" style="padding:5px 5px 5px 5px;">
             <legend>
               Authors
             </legend>
@@ -305,7 +305,7 @@
             </label>
           </fieldset>
           <br>
-          <fieldset style="padding-left:5px;padding-right:5px;">
+          <fieldset style="padding:5px 5px 5px 5px;">
             <legend>
               Prices
             </legend>
