--- a/BL.html
+++ b/BL.html
@@ -211,7 +211,16 @@
                     Cixin Liu
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  When Chen's parents are incinerated before his eyes by a blast of ball lightning, he devotes his
+                  life to cracking the secret of this mysterious natural phenomenon. His search takes him to stormy 
+                  mountaintops, an experimental military weapons lab, and an old Soviet science station.
+
+                  The more he learns, the more he comes to realize that ball lightning is just the tip of an entirely new frontier. 
+                  While Chen's quest for answers gives purpose to his lonely life, it also pits him against soldiers and scientists with motives of 
+                  their own: a beautiful army major with an obsession with dangerous weaponry, and a physicist who has no place for ethical considerations in his 
+                  single-minded pursuit of knowledge.
+                </p>
                 <div id="payDeliver">
                     <button onclick="localStorage.setItem('Ball Lightning', '1');alert('added to your cart');">
                         <b>
