--- a/BL.html
+++ b/BL.html
@@ -200,7 +200,7 @@
                     </tr>
                 </table>
             </div>
-            <fieldset style="float:right;padding-right:100px;">
+            <fieldset style="float:right !important;padding-right:100px;width:60%">
               <div>
                 <h2 id="bookTitle">
                     Ball Lightning
