--- a/SE.html
+++ b/SE.html
@@ -211,7 +211,21 @@
                     Cixin Liu
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  In those days, Earth was a planet in space.
+
+                  In those days, Beijing was a city on Earth.
+
+                  On this night, history as known to humanity came to an end.
+
+                  Eight light years away, a star has died, creating a supernova event that showers Earth in deadly levels of radiation. 
+                  Within a year, everyone over the age of 13 will die.
+
+                  And so the countdown begins. Parents apprentice their children and try to pass on the knowledge needed to keep the world running.
+
+                  But when the world is theirs, the last generation may not want to continue the legacy left to them. And in shaping the future 
+                  however they want, will the children usher in an era of bright beginnings or final mistakes?
+                </p>
                 <div id="payDeliver">
                     <button onclick="localStorage.setItem('Supernova Era', '1');alert('added to your cart');">
                         <b>
