--- a/TBP.html
+++ b/TBP.html
@@ -214,7 +214,14 @@
                     Cixin Liu
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  A secret military group sends signals into space in hopes of establishing contact with aliens—and succeeds.
+
+                  Picking up their signal is an alien civilization on the brink of destruction who now readies to invade Earth.
+
+                  News of the coming invasion divides humanity like never before. Some want to help the superior beings take over a world they 
+                  see as corrupt. Others prepare to fight the invasion at all cost.
+                </p>
                 <div id="payDeliver">
                     <button onclick="localStorage.setItem('The Three Body Problem Trilogy', '1');alert('added to your cart');">
                         <b>
